# Bartholomew-identity-system

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ASSUMPTIONS.md  CHANGELOG.md  CHECKLISTS.md  CI.md  CONSENT_GATES_IMPLEMENTATION.md  DECISIONS.md  DEV_SETUP_NOTES.md  Dockerfile  FTS5_FALLBACK_IMPLEMENTATION.md  FTS_INGESTION_WIRING_IMPLEMENTATION.md  FTS_SCHEMA_HYGIENE_IMPLEMENTATION.md  INTERFACES.md  Identity.yaml  MASTER_PLAN.md  METRICS_SECURITY_IMPLEMENTATION.md  ORCHESTRATION_INTEGRATION.md  PERF_BUDGETS.md  PHASE_2A_IMPLEMENTATION.md  PHASE_2B_IMPLEMENTATION.md  PHASE_2C_IMPLEMENTATION.md  PHASE_2D_IMPLEMENTATION.md  QUICKSTART.md  README.md  REVIEWS.md  RISKS.md  ROADMAP.md  SAFETY_NETS_IMPLEMENTATION.md  STAGE_0_COMPLETION.md  TEST_MATRIX.md  UI_INTEGRATION_GUIDE.md  VALIDATION_REPORT.md  app.py  chat.py  cleanup_test_memory.py  conftest.py  (+18 more)
.github/: copilot-instructions.md
.github/workflows/: pre-commit.yml  smoke.yml  tests.yml
bartholomew/: cli.py
bartholomew/config/: embeddings.yaml  memory_rules.yaml
bartholomew/kernel/: __init__.py  chunking_engine.py  consent_gate.py  daemon.py  db_ctx.py  embedding_engine.py  encryption_engine.py  event_bus.py  experience_kernel.py  fts_client.py  global_workspace.py  hybrid_retriever.py  memory_rules.py  memory_store.py  metrics_registry.py  narrator.py  persona.py  persona_pack.py  planner.py  policy.py  redaction_engine.py  retrieval.py  retrieval_config.py  skill_base.py  skill_manifest.py  skill_permissions.py  skill_registry.py  state_model.py  summarization_engine.py  time_utils.py  types.py  vector_store.py  working_memory.py
bartholomew/orchestrator/: __init__.py
bartholomew/skills/: __init__.py  calendar_draft.py  notify.py  tasks.py
bartholomew_api_bridge_v0_1/: README_API_BRIDGE.md  app.py
bartholomew_api_bridge_v0_1/scripts/: curl_smoke.sh
bartholomew_api_bridge_v0_1/tests/: http_smoke.test.http  test_sqlite_wal_api.py
config/: drives.yaml  kernel.yaml  memory_rules.py  memory_rules.yaml  persona.yaml  policy.yaml
config/persona_packs/: caregiver.yaml  default.yaml  (+1 more)
data/: barth.db  hybrid_paraphrases.csv  memory.db
docs/: EXPERIENCE_KERNEL_IMPLEMENTATION.md  GLOBAL_WORKSPACE_IMPLEMENTATION.md  NARRATOR_EPISODIC_LAYER_IMPLEMENTATION.md  PERSONA_PACK_IMPLEMENTATION.md  README.md  REFLECTION_GENERATION.md  SAFETY_PARKING_BRAKE.md  SKILL_REGISTRY_IMPLEMENTATION.md  STAGE_3_6_INTEGRATION.md  STATUS_2025-12-29.md  WAL_CLEANUP_PATTERN.md  WORKING_MEMORY_IMPLEMENTATION.md  brain.md
identity_interpreter/: __init__.py  cli.py  loader.py  models.py  normalizer.py
scripts/: __init__.py  backfill_fts.py  debug_privacy_paraphrases.py  hybrid_search.py  smoke.ps1  smoke.sh  start_bartholomew.ps1  start_bartholomew.sh
tests/: conftest.py  test_bm25_udf_fallback.py  test_consent_gates.py  test_experience_kernel.py  test_fts_schema_hygiene.py  test_fts_search.py  test_fts_snippet_smoke.py  test_global_workspace.py  test_hybrid_boosts_flip.py  test_hybrid_fusion_math.py  test_hybrid_recency.py  test_hybrid_rrf.py  test_hybrid_tiebreakers.py  test_indexing_policy_guard.py  test_kernel_privacy_guard.py  test_liveness_self.py  test_loader.py  test_metrics_labeled.py  test_metrics_labels.py  test_metrics_production_mode.py  test_metrics_registry_guard.py  test_narrator.py  test_no_raw_sqlite_connect_in_api.py  test_orchestration_integration.py  test_parking_brake_persistence_roundtrip.py  test_parking_brake_scoped_blocks.py  test_persona_pack.py  test_phase2a_redaction.py  test_phase2b_encryption.py  test_phase2c_summarization.py  test_phase2d_compute_only.py  test_phase2d_embeddings.py  test_phase2d_fixpack_v3.py  test_policies.py  test_query_weighting.py  test_reflection_generation.py  test_retrieval_factory.py  test_retrieval_fts5_fallback.py  test_retrieval_hot_reload.py  test_skill_registry.py  (+7 more)
(+82 files in other folders)
