[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "identity_interpreter"
version = "0.1.0"
description = "Identity Interpreter for Bartholomew AI"
authors = [
    {name = "Taylor Paul", email = "tpaul733@gmail.com"}
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "PL",  # pylint
]
ignore = [
    "E501",   # line too long (handled by black)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"identity_interpreter/models.py" = ["N801"]  # Allow Identity_ for disambiguation

[tool.ruff.lint.isort]
known-first-party = ["identity_interpreter"]
force-single-line = false
lines-after-imports = 2

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
